--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cn.whzxt.android"
     android:versionCode="1"
-    android:versionName="1.0">
+    android:versionName="1.9">
 
     <uses-sdk android:minSdkVersion="9" />
 
@@ -25,4 +25,5 @@
 	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-permission android:name="android.permission.WAKE_LOCK" />
+	<uses-permission android:name="android.permission.CALL_PHONE" />
 </manifest>
